console app some bug fixed